# EGEConverter

./: CMakeLists.txt  README.txt
src/: main.cpp
